--- a/work1.html
+++ b/work1.html
@@ -6,6 +6,16 @@
 
     </head>
     <body>
-      <p id = "sample-para">The Internet is teeming with a host of web development tools, from browser add-ons to smart plugins, the amount of choices available now is massive! So, why not invest in some really productive web tools that’ll help you improve your front-end designing skills? Tools like Sublime Text, jQuery, Emmet, GitHub, Bootstrap, and Sass are nothing short of a godsend for web developers. </p>
+      <p id = "sample-para">Tune in LIVE ON TWITCH to watch the solution happen in real time. Everyday 6am  IST. 
+https://www.twitch.tv/midnight_simon/
+For all upcoming contest check clist.by
+What resources do you recommend to learn algorithms as a beginner?
+1.)Competitive Programmer's Handbook
+2.)usaco.guide
+3.)LeetCode Explore
+4.)Grokking the Coding Interview (paid)
+5.)Elements of Programming Interviews
+6.)Any of those lists like blind75 / grind75 / neetcode150 /leetcode150 / etc
+7. )Coding Ninjas DSA & CP</p>
     </body>
   </html>
