--- a/index.html
+++ b/index.html
@@ -8,27 +8,18 @@
     <body id ="set-color">
       <h1 id="heading">RESOURCES TO LEARN CP</h1>
       <div>
-        <!-- <p id = "sample-para">Tune in LIVE ON TWITCH to watch the solution happen in real time. Everyday 6am  IST.
-https://www.twitch.tv/midnight_simon/
-For all upcoming contest check clist.by
-What resources do you recommend to learn algorithms as a beginner?
-1.)Competitive Programmer's Handbook
-2.)
-3.)LeetCode Explore
-4.)Grokking the Coding Interview (paid)
-5.)Elements of Programming Interviews
-6.)Any of those lists like blind75 / grind75 / neetcode150 /leetcode150 / etc
-7. )Coding Ninjas DSA & CP </p> -->
 <ul class = "list">
-  <li>Tune in LIVE ON TWITCH to watch the solution happen in real time. Everyday 6am  IST.
-https://www.twitch.tv/midnight_simon/</li>
-<li>usaco.guide</li>
-<li>LeetCode Explore Cards</li>
-<li>Elements of Programming Interviews</li>
-<li>Grokking the Coding Interview (paid)</li>
-<li>Any of those lists like blind75 / grind75 / neetcode150 /leetcode150 / etc</li>
-<li>Coding Ninjas DSA & CP</li>
+<li><a href="https://www.twitch.tv/midnight_simon" target="_blank">Tune in LIVE ON TWITCH to watch the solution happen in real time. Everyday 6am  IST. At midnight_simon's stream</a></li>
+<li><a href="https://usaco.guide/" target="_blank">usaco.guide</a></li>
+<li><a href ="https://leetcode.com/explore/" target="_blank">LeetCode Explore Cards</a></li>
+<li><a href ="elements of programming interview.pdf" target="_blank">Elements of Programming Interviews</a></li>
+<li><a href ="https://www.educative.io/courses/grokking-coding-interview-patterns-cpp" target="_blank">Grokking the Coding Interview (paid)</a></li>
+<li>Any of those lists like <a href = "https://leetcode.com/discuss/general-discussion/460599/blind-75-leetcode-questions"  target="_blank">blind75</a> /<a href="https://www.techinterviewhandbook.org/grind75" target="_blank"> grind75</a>/<a href="https://neetcode.io/practice" target="_blank"> neetcode150</a>/<a href="https://seanprashad.com/leetcode-patterns/" target="_blank">seanprashad list</a> etc</li>
+<li><a href = "https://www.codingninjas.com/courses/c-plus-plus-data-structures-and-algorithms?utm_source=google&utm_medium=%5Bsearch%5D&utm_campaign=14935983531_139422131276_e_coding%20ninjas%20data%20structures%20and%20algorithms__613071547439_c&gclid=Cj0KCQiA1NebBhDDARIsAANiDD3ewLfF5ri5XqkZoRCfXG2bL5CVvRIM9Jgkb-rzuTv_70uZozGwBxUaArzLEALw_wcB" target="_blank">Coding Ninjas DSA & CP</li>
+<li><a href ="competitive programmers handbook.pdf" target="_blank">Competitive Programmers Handbook</li>
+<li><a href = "Algorithms-JeffE.pdf" target="_blank">Algorithms by Jeff Erickson</a></li>
+<li><a href ="CLRS book.pdf">Introduction to algorithms (Third edition)</a></li>
 </ul>
-      </div>
-    </body>
-  </html>
+    </div>
+  </body>
+</html>
